Bug 1511447 - Fix truncated division on ARM64. r=nbp